syntax = "proto3";
package analyticspb;

option go_package = "github.com/turbo514/shortenurl-v2/internal/shared/gen/proto/analyticspb";

service AnalyticsService {
    // ...
}