syntax = "proto3";
package tenantpb;

option go_package = "github.com/turbo514/shortenurl-v2/shared/gen/proto/tenantpb";

import "google/protobuf/empty.proto";

service TenantService {
    rpc CreateTenant(CreateTenantRequest) returns(CreateTenantResponse);
    rpc CreateUser(CreateUserRequest) returns(google.protobuf.Empty);
    rpc Login(LoginRequest) returns(LoginResponse);
}

message CreateTenantRequest {
    string name = 1;
}

message CreateTenantResponse {
    string tenant_id = 1;
    string api_key = 2;
}

message CreateUserRequest {
    string tenant_id = 1;
    string api_key = 2;
    string name = 3;
    string password = 4;
}

message LoginRequest {
    string name = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}